[package]
name = "zero_copy_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
tracing = "*"
tracing-subscriber = "0.2.17"
lru="0.8.1"
rand="0.8.5"
# wtinylfu="*"
demikernel = {git = "https://github.com/deeptir18/demikernel", branch = "perftools_public", version = "1", features = ["profiler"], optional = true}


[features]
default = []
profiler = ["demikernel"]
